--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap-css-linkup  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!-- TailWind-css-linkup  -->
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <!-- css-stylesheet-linkup  -->
     <link rel="stylesheet" href="css/style.css">
     <title>Mack-Book-Pro</title>
@@ -21,10 +20,72 @@
     <!-- Header_part-html-end.  -->
     <!-- Main-part-html-start  -->
     <main>
-        <section id="container">
-            <div class="mac-book">
-                <h2>Mac-Book-Pro</h2>
-            </div>
+        <section class="mx-5 mt-10">
+            <div class=" grid grid-cols-2">
+                <div class="mac-img mr-5">
+                    <img src="images/mac.png" alt="">
+                </div>
+                <div class="mac-details">
+                    <h1 class="text-3xl text-black">Customize your Blue 24-inch <br> iMace with Apple M1 chip.</h2>
+                        <p class="mt-2">A new report coming through @LeaksApplePro claims that the M1X-powered Mac Mini
+                            has been
+                            delayed until early 2022 because of “marketing reasons.” While the exact reason has not been
+                            pointed out, it’s likely that Apple wants to focus on the new chipset and the MacBook Pro
+                            models this year. The recent global chip shortage could have also played a role behind this
+                            decision.</p>
+                        <!-- memory-part-html-start  -->
+                        <div class="about-memory mt-12">
+                            <h2 class="text-xl ">Memory:</h2>
+                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                                8GB Undfine Memory .</button>
+                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                                16GB Undfine Memory .</button>
+                        </div>
+                        <!-- memory-part-html-end.  -->
+                        <!-- storage-part-html-start  -->
+                        <div class="about-memory mt-12">
+                            <h2 class="text-xl ">Storage:</h2>
+                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                                256GB SSD storage .</button>
+                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                                512GB SSD storage .</button>
+                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                                1TB SSD storage .</button>
+                        </div>
+                        <!-- storage-part-html-end.  -->
+                        <!-- delivery-option-part-html-start  -->
+                        <div class="about-memory mt-12">
+                            <h2 class="text-xl ">Chose your delivery opstion:</h2>
+                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                                Friday, AUG 25 FREE Prime Delivery .</button>
+                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                                Friday, AUG 21delivery charge $20 .</button>
+                        </div>
+                        <div class="grid grid-cols-2 mt-12">
+                            <div class="total-details">
+                                <div class="grid grid-cols-2">
+                                    <div class="info-details">
+                                        <h5 class="text-md border-b-2">Extera Money Cost </h5>
+                                        <h5 class="text-md border-b-2">Extera Storage Cost </h5>
+                                        <h5 class="text-md border-b-2">Best Price </h5>
+                                        <h5 class="text-md border-b-4 border-black">Delivery Charge </h5>
+                                        <h5 class="text-md border-b-2">Total Price </h5>
+                                    </div>
+                                    <div class=" price-details">
+                                        <h5 class="text-md border-b-2">$1299 </h5>
+                                        <h5 class="text-md border-b-2 ">$0 </h5>
+                                        <h5 class="text-md border-b-2">$0</h5>
+                                        <h5 class="text-md border-b-4 border-black">$0</h5>
+                                        <h5 class="text-md border-b-2">$1299 </h5>
+                                    </div>
+                                </div>
+                            </div>
+                            <div></div>
+                        </div>
+                        <!-- delivery-option-part-html-end.  -->
+
+
+                </div>
         </section>
     </main>
     <!-- Main-part-html-end.  -->
@@ -34,12 +95,9 @@
     </footer>
     <!-- Footer-part-html-end. -->
 
-    <!-- Bootstrap-javascript-linkup  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-        crossorigin="anonymous"></script>
+
     <!-- javaScript-linlup  -->
-    <script src="js/script.js"></script>
+    <script src=" js/script.js"></script>
 </body>
 
 </html>
