--- a/index.html
+++ b/index.html
@@ -37,47 +37,60 @@
                         <!-- memory-part-html-start  -->
                         <div class="about-memory mt-12">
                             <h2 class="text-xl font-bold">Memory:</h2>
-                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                            <button id="memory-first"
+                                class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
                                 8GB Undfine Memory .</button>
-                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                            <button id="memory-second"
+                                class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
                                 16GB Undfine Memory .</button>
                         </div>
                         <!-- memory-part-html-end.  -->
                         <!-- storage-part-html-start  -->
                         <div class="about-memory mt-12">
                             <h2 class="text-xl font-bold">Storage:</h2>
-                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                            <button id="storage-first"
+                                class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
                                 256GB SSD storage .</button>
-                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                            <button id="storage-second"
+                                class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
                                 512GB SSD storage .</button>
-                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                            <button id="storage-thired"
+                                class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
                                 1TB SSD storage .</button>
                         </div>
                         <!-- storage-part-html-end.  -->
                         <!-- delivery-option-part-html-start  -->
                         <div class="about-memory mt-12">
                             <h2 class="text-xl font-bold">Chose your delivery opstion:</h2>
-                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                            <button id="delivery-first"
+                                class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
                                 Friday, AUG 25 FREE Prime Delivery .</button>
-                            <button class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
+                            <button id="delivery-second"
+                                class="text-center text-black border-2 border-indigo-200 rounded mr-2 ">
                                 Friday, AUG 21delivery charge $20 .</button>
                         </div>
                         <div class="grid grid-cols-2 mt-12">
                             <div class="total-details">
                                 <div class="grid grid-cols-2">
                                     <div class="info-details">
+                                        <h5 class="text-md font-bold border-b-2 mt-2">Best Price </h5>
                                         <h5 class="text-md font-bold border-b-2 mt-2">Extera Money Cost </h5>
                                         <h5 class="text-md font-bold border-b-2 mt-2">Extera Storage Cost </h5>
-                                        <h5 class="text-md font-bold border-b-2 mt-2">Best Price </h5>
                                         <h5 class="text-md font-bold border-b-4 border-black mt-2">Delivery Charge </h5>
                                         <h5 class="text-md font-bold border-b-2">Total Price </h5>
                                     </div>
                                     <div class=" price-details">
-                                        <h5 class="text-md font-bold border-b-2 mt-2">$1299 </h5>
-                                        <h5 class="text-md font-bold border-b-2 mt-2">$0 </h5>
-                                        <h5 class="text-md font-bold border-b-2 mt-2">$0</h5>
-                                        <h5 class="text-md font-bold border-b-4 border-black mt-2">$0</h5>
-                                        <h5 class="text-md font-bold border-b-2">$1299 </h5>
+                                        <h5 class="text-md font-bold border-b-2 mt-2">$<span id="best-cost">1299</span>
+                                        </h5>
+                                        <h5 class="text-md font-bold border-b-2 mt-2">$<span id="memory-cost">0</span>
+                                        </h5>
+                                        <h5 class="text-md font-bold border-b-2 mt-2">$<span id="storage-cost">0</span>
+                                        </h5>
+                                        <h5 class="text-md font-bold border-b-4 border-black mt-2">$<span
+                                                id="delivery-cost">0</span>
+                                        </h5>
+                                        <h5 class="text-md font-bold border-b-2">$<span id="total-cost">1299</span>
+                                        </h5>
                                     </div>
                                     <!-- Promo-Code-Part-Start  -->
                                     <div class="promo-code mt-10">
