--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
                                         </h5>
                                     </div>
                                     <!-- Promo-Code-Part-Start  -->
-                                    <div class="promo-code mt-10">
+                                    <div class="promo-box mt-10">
                                         <h3 class="text-xl"> Add Promo Code</h3>
                                         <div class="inline-flex mt-2 h-10 ">
-                                            <input class="border-2 border-indigo-200 rounded" type="text"
-                                                placeholder="input your promo code.">
-                                            <button
+                                            <input id="input-value" class="border-2 border-indigo-200 rounded"
+                                                type="text" placeholder="input your promo code.">
+                                            <button id="apply-btn"
                                                 class="btn border border-2 rounded bg-red-800 text-white text-center px-6">Apply</button>
                                         </div>
                                     </div>
@@ -122,7 +122,7 @@
             <div class="inline-flex  w-3/4 text-position ">
                 <h1 class=" out-total text-3xl text-black font-bold text-center "> Total:</h1>
                 <button class=" out-total-amount text-3xl text-black font-bold text-center ml-10 ">$<span
-                        id="">1299</span></button>
+                        id="footer-total">1299</span></button>
             </div>
         </div>
     </section>
