--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                                             <input id="input-value" class="border-2 border-indigo-200 rounded"
                                                 type="text" placeholder="input your promo code.">
                                             <button id="apply-btn"
-                                                class="btn border border-2 rounded bg-red-800 text-white text-center px-6">Apply</button>
+                                                class="btn border border-2 rounded bg-red-800 text-white text-center px-6">Apply
+                                                Now </button>
                                         </div>
                                     </div>
                                     <!-- Promo-Code-Part-End. -->
